finished implementing some tcp utility functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES
         main.cpp
         utils/socket_utils.cpp
-        utils/socket_utils.h)
+        utils/socket_utils.h tcp_client/TcpClient.cpp tcp_client/TcpClient.h)
 add_executable(socket_programming ${SOURCE_FILES})
