--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -3,6 +3,8 @@ set(SOURCE_FILES
   socket_utils.h
   socket_utils.cpp)
 
+add_compile_options(-Wall -Wextra -Wpedantic)
+
 add_library(utils STATIC ${SOURCE_FILES})
 
 target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
